fixed some grid alignment stuff

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,20 @@
+
+/* default stuff */
 body, input, select, textarea {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Arial,sans-serif;
   font-size: 16pt;
 }
+
 .monospace {
   font-family: Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
 }
+
 
 /* grid elements */
 
 .container {
   display: grid;
+  grid-column-gap: 0.5em;
   /*background-color: cyan;*/
 }
 
@@ -18,6 +23,7 @@ body, input, select, textarea {
 }
 
 .problem {
+  margin: 1em 0;
   /*background-color: pink;*/
 }
 
@@ -27,7 +33,7 @@ body, input, select, textarea {
   padding: .5em;
   background: #23241f;
   border-radius: 3px;
-  margin: 0 .25em;
+  /*margin: 0 .25em;*/
   padding: .25em .65em;
 }
 
